[package]
name = "cuckoofilter-mmap"
version = "0.1.0"
edition = "2021"
authors = ["domyway <weizhao029@gmail.com>"]
description = "cuckkoo filter use mmap"
license = "MIT OR Apache-2.0"

[dependencies]
memmap2 = "0.9.4"
rand = "0.8.5"
murmur3 = "0.5.2"
thiserror = "1.0.61"
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.3"
criterion = "0.5"

[[bin]]
name = "fpr_bench"
path = "src/bin/fpr_bench.rs"

[[bench]]
name = "cuckoo_bench"
harness = false
